--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Finding The Way Home
-cover: 'assets/images/cover1.jpg'
+title: A place for my thoughts
+cover: 'assets/images/cover4.jpg'
 class: 'home-template'
 navigation: True
 logo: 'assets/images/ghost.png'
